// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarAll matches snapshot 1`] = `
<div>
  <div
    class="Calendarstyles__CalendarContainer-w1nvhe-0 cWWXZC calendar"
  >
    <div
      class="Calendarstyles__CalendarHeader-w1nvhe-1 gnNPYu"
    >
      <span
        class="Calendarstyles__CalendarHeader__Icon-w1nvhe-3 hAFknT"
      >
        <svg>
          chevron.svg
        </svg>
      </span>
      <h2
        class="Calendarstyles__CalendarHeader__Title-w1nvhe-2 bedlRa"
      >
        December 2020
      </h2>
      <span
        class="Calendarstyles__CalendarHeader__Icon-w1nvhe-3 hAFknT right"
      >
        <svg>
          chevron.svg
        </svg>
      </span>
    </div>
    <div
      class="Calendarstyles__CalendarDOW-w1nvhe-4 eNKwnW"
    >
      <h5
        class="Calendarstyles__CalendarDOW__Day-w1nvhe-5 caZTtC"
      >
        Sun
      </h5>
      <h5
        class="Calendarstyles__CalendarDOW__Day-w1nvhe-5 caZTtC"
      >
        Mon
      </h5>
      <h5
        class="Calendarstyles__CalendarDOW__Day-w1nvhe-5 caZTtC"
      >
        Tue
      </h5>
      <h5
        class="Calendarstyles__CalendarDOW__Day-w1nvhe-5 caZTtC"
      >
        Wed
      </h5>
      <h5
        class="Calendarstyles__CalendarDOW__Day-w1nvhe-5 caZTtC"
      >
        Thu
      </h5>
      <h5
        class="Calendarstyles__CalendarDOW__Day-w1nvhe-5 caZTtC"
      >
        Fri
      </h5>
      <h5
        class="Calendarstyles__CalendarDOW__Day-w1nvhe-5 caZTtC"
      >
        Sat
      </h5>
    </div>
    <div
      class="Calendarstyles__CalendarHabit-w1nvhe-6 cQtiZG"
    >
      <h4
        class="Calendarstyles__CalendarHabit__Title-w1nvhe-7 fqwYPN"
      >
        Fazer exercício
      </h4>
      <div
        class="Calendarstyles__CalendarDays-w1nvhe-8 jLvILQ"
      >
         
        <div
          class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
        >
          <span
            class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
          >
            29
          </span>
        </div>
        <div
          class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
        >
          <span
            class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
          >
            30
          </span>
        </div>
        <div
          class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX today "
        >
          <span
            class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
          >
            1
          </span>
        </div>
        <div
          class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
        >
          <span
            class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
          >
            2
          </span>
        </div>
        <div
          class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
        >
          <span
            class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
          >
            3
          </span>
        </div>
        <div
          class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
        >
          <span
            class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
          >
            4
          </span>
        </div>
        <div
          class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
        >
          <span
            class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
          >
            5
          </span>
        </div>
         
      </div>
    </div>
    <div
      class="Calendarstyles__CalendarHabit-w1nvhe-6 cQtiZG"
    >
      <h4
        class="Calendarstyles__CalendarHabit__Title-w1nvhe-7 fqwYPN"
      >
        Fazer dieta
      </h4>
      <div
        class="Calendarstyles__CalendarDays-w1nvhe-8 jLvILQ"
      >
         
        <div
          class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
        >
          <span
            class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
          >
            29
          </span>
        </div>
        <div
          class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
        >
          <span
            class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
          >
            30
          </span>
        </div>
        <div
          class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX today "
        >
          <span
            class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
          >
            1
          </span>
        </div>
        <div
          class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
        >
          <span
            class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
          >
            2
          </span>
        </div>
        <div
          class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
        >
          <span
            class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
          >
            3
          </span>
        </div>
        <div
          class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
        >
          <span
            class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
          >
            4
          </span>
        </div>
        <div
          class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
        >
          <span
            class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
          >
            5
          </span>
        </div>
         
      </div>
    </div>
  </div>
</div>
`;

exports[`CalendarSingle matches snapshot 1`] = `
<div>
  <div
    class="Calendarstyles__CalendarContainer-w1nvhe-0 cWWXZC calendar"
  >
    <div
      class="Calendarstyles__CalendarHeader-w1nvhe-1 gnNPYu"
    >
      <span
        class="Calendarstyles__CalendarHeader__Icon-w1nvhe-3 hAFknT"
      >
        <svg>
          chevron.svg
        </svg>
      </span>
      <h2
        class="Calendarstyles__CalendarHeader__Title-w1nvhe-2 bedlRa"
      >
        December 2020
      </h2>
      <span
        class="Calendarstyles__CalendarHeader__Icon-w1nvhe-3 hAFknT right"
      >
        <svg>
          chevron.svg
        </svg>
      </span>
    </div>
    <div
      class="Calendarstyles__CalendarDOW-w1nvhe-4 eNKwnW"
    >
      <h5
        class="Calendarstyles__CalendarDOW__Day-w1nvhe-5 caZTtC"
      >
        Sun
      </h5>
      <h5
        class="Calendarstyles__CalendarDOW__Day-w1nvhe-5 caZTtC"
      >
        Mon
      </h5>
      <h5
        class="Calendarstyles__CalendarDOW__Day-w1nvhe-5 caZTtC"
      >
        Tue
      </h5>
      <h5
        class="Calendarstyles__CalendarDOW__Day-w1nvhe-5 caZTtC"
      >
        Wed
      </h5>
      <h5
        class="Calendarstyles__CalendarDOW__Day-w1nvhe-5 caZTtC"
      >
        Thu
      </h5>
      <h5
        class="Calendarstyles__CalendarDOW__Day-w1nvhe-5 caZTtC"
      >
        Fri
      </h5>
      <h5
        class="Calendarstyles__CalendarDOW__Day-w1nvhe-5 caZTtC"
      >
        Sat
      </h5>
    </div>
    <div
      class="Calendarstyles__CalendarDays-w1nvhe-8 jLvILQ"
    >
       
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX disabled "
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          29
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX disabled "
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          30
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX today "
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          1
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          2
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          3
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          4
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          5
        </span>
      </div>
       
    </div>
    <div
      class="Calendarstyles__CalendarDays-w1nvhe-8 jLvILQ"
    >
       
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          6
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          7
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          8
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          9
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          10
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          11
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          12
        </span>
      </div>
       
    </div>
    <div
      class="Calendarstyles__CalendarDays-w1nvhe-8 jLvILQ"
    >
       
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          13
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          14
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          15
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          16
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          17
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          18
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          19
        </span>
      </div>
       
    </div>
    <div
      class="Calendarstyles__CalendarDays-w1nvhe-8 jLvILQ"
    >
       
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          20
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          21
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          22
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          23
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          24
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          25
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          26
        </span>
      </div>
       
    </div>
    <div
      class="Calendarstyles__CalendarDays-w1nvhe-8 jLvILQ"
    >
       
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          27
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          28
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          29
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          30
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX"
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          31
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX disabled "
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          1
        </span>
      </div>
      <div
        class="Calendarstyles__CalendarDays__Cell-w1nvhe-9 jaOflX disabled "
      >
        <span
          class="Calendarstyles__CalendarDays__Cell__Inner-w1nvhe-10 hsOCoE"
        >
          2
        </span>
      </div>
       
    </div>
  </div>
</div>
`;

exports[`HabitsSettings matches snapshot 1`] = `
<div>
  <svg
    class="settings-icon"
  >
    settings.svg
  </svg>
  <div
    class="Drawerstyles__DrawerContainer-u5jgzg-0 lkcEUU"
  >
    <h2
      class="Drawerstyles__DrawerTitle-u5jgzg-2 eCJKZq"
    >
      Settings
    </h2>
    <div
      class="Drawerstyles__DrawerContent-u5jgzg-3 jAyGXs"
    >
      <div
        class="Settingsstyles__SettingsBlock-kn1k5n-0 lppunF"
      >
        <label
          class="Settingsstyles__SettingsBlock__Label-kn1k5n-1 gEYzuB"
          for="sort-by"
        >
          Sort by
        </label>
        <div
          class="Settingsstyles__SettingsBlock__Input-kn1k5n-2 ixIXUL"
        >
          <div
            class="MuiInputBase-root MuiInput-root"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="sort-by"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="sort-by"
              role="button"
              tabindex="0"
            >
              Date
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="date"
            />
            <svg
              class="MuiSelect-icon"
            >
              chevron.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Drawerstyles__DrawerOverlay-u5jgzg-1 jzRVJQ"
  />
</div>
`;
